# OOP_Project

./: Authentication.cpp  CMakeLists.txt  Customer.cpp  Customer.h  CustomerManager.cpp  CustomerManager.h  CustomerRepository.cpp  CustomerRepository.h  CustomerValidator.cpp  CustomerValidator.h  Employee.cpp  Employee.h  Product.cpp  Product.h  ProductRepository.cpp  ProductRepository.h  ProductValidator.cpp  ProductValidator.h  ProfileManager.cpp  ProfileManager.h  RunTests.cpp  SarciniProiect.xlsx  StartDataB.h  StartDataMK.cpp  TestProduct.cpp  TestProductValidation.cpp  Test_Autentificare.cpp  User.cpp  User.h  fullTest.cpp  main.cpp  tests_main.cpp
Authentificator_Product_User/: Authentication.h  StartDataB.cpp
Controller/: AuthController.cpp  AuthController.h  AuthenticationController.cpp  AuthenticationController.h  CustomerController.cpp  CustomerController.h  CustomerManager.cpp  CustomerManager.h  CustomerValidator.cpp  CustomerValidator.h  OrderService.cpp  OrderService.h  UserActions.cpp  UserActions.h
Core/: Auth.cpp  Auth.h  Customer.cpp  Customer.h  User.cpp  User.h
Customer/: CustomerManager.cpp  CustomerManager.h
Domain/: Customer.cpp  Customer.h  Employee.cpp  Employee.h  Order.cpp  Order.h  Product.cpp  Product.h  ProductValidator.cpp  User.cpp  User.h
Order/: Order.h  OrderService.h
Product/: Product.h
Repository/: CustomerRepository.cpp  CustomerRepository.h  EmployeeRepository.cpp  EmployeeRepository.h  ProductRepository.cpp  ProductRepository.h  Repository.h  StartData.cpp  StartDataB.h  StartDataMK.cpp  StartDataMK.h
Tests/: AuthTests.cpp  ProductTests.cpp  TestProductValidation.cpp  teste_cezar.cpp  tests_main.cpp
UI/: CustomerUI.cpp  CustomerUI.h  EmployeeUI.cpp  EmployeeUI.h
k_b/Customer/: CustomerManager.cpp
k_b/Order/: Order.cpp  Order.h
